--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@eslint/js": "^9.13.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
+    "file-loader": "^6.2.0",
     "globals": "^15.11.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.2",
